--- a/index.html
+++ b/index.html
@@ -9,53 +9,56 @@
 	</head>
 	<body>
 		<header class="main-header">
-			<div class="container clearfix">
+			<div class="topbox clearfix">
 				<h1 class="name"><a href="#">Alexander L. P. Williams</a></h1>
-      				<ul class="main-nav">
-        				<li><a href="#">Home</a></li>
-        				<li><a href="#">Portfolio</a></li>
-        				<li><a href="#">Contact</a></li>
-      				</ul>
+      				<nav>
+	      				<ul class="main-nav">
+	        				<li><a href="#">Home</a></li>
+	        				<li><a href="#">Portfolio</a></li>
+	        				<li><a href="#">Contact</a></li>
+	      				</ul>
+      				</nav>
       		</div>
 		</header>
 
+		<div class="intro clearfix">
 		<img class="profile" src="img/responsive-layout-profile.png" alt="profile image">
-
-		<p>Hi! I'm a front-end developer who loves responsive design and css. I recently finished a degree in front-end web development at Treehouse and am excited to put all my skills to use!</p>
+		<p class="blurb">Hi! I'm a front-end developer who loves responsive design and css. I recently finished a degree in front-end web development at Treehouse and am excited to put all my skills to use!</p>
+		</div>
 
 		<h2>Portfolio</h2>
 
-		<div class=" col">
+		<div class="box">
 			<img class="marketing" src="img/portfolio-1.png" alt="marketing image">
 			<h3>Marketing Page</h3>
 				<p>This project shows the front page of a marketing website meant for a specific business I'm interested in.</p>
 		</div>
 
-		<div class=" col">
+		<div class="box">
 			<img class="search" src="img/portfolio-2.png" alt="search image">
 			<h3>Search Page</h3>
 				<p>This project searches through a specific database to find information that the user is trying to look up.</p>
 		</div>
 
-		<div class=" col">
+		<div class="box">
 			<img class="travel" src="img/portfolio-3.png" alt="travel image">
 			<h3>Travel App</h3>
 				<p>This project compares travel times based on different transporation methods and tells you the best one.</p>
 		</div>
 
-		<div class=" col">
+		<div class="box">
 			<img class="map" src="img/portfolio-4.png" alt="map image">
 			<h3>Map of Favorite Spots</h3>
 				<p>This project uses mapping APIs to plot points for my favorite spots in the city for a do-it-yourself walking tour.</p>
 		</div>
 
-		<div class=" col">
+		<div class="box">
 			<img class="gallery" src="img/portfolio-5.png" alt="gallery image">
 			<h3>Photo Gallery</h3>
 				<p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
 		</div>
 
-		<div class=" col">
+		<div class="box">
 			<img class="calculator" src="img/portfolio-6.png" alt="calculator image">
 			<h3>Calculator</h3>
 				<p>Someone can enter in the numbers they want, and press the big blue button to get the result.</p>
