--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
+
 		<header class="main-header">
 			<div class="topbox clearfix">
 				<h1 class="name"><a href="#">Alexander L. P. Williams</a></h1>
@@ -22,8 +23,8 @@
 		</header>
 
 		<div class="intro clearfix">
-		<img class="profile" src="img/responsive-layout-profile.png" alt="profile image">
-		<p class="blurb">Hi! I'm a front-end developer who loves responsive design and css. I recently finished a degree in front-end web development at Treehouse and am excited to put all my skills to use!</p>
+			<img class="profile" src="img/responsive-layout-profile.png" alt="profile image">
+			<p class="blurb">Hi! I'm a front-end developer who loves responsive design and css. I recently finished a degree in front-end web development at Treehouse and am excited to put all my skills to use!</p>
 		</div>
 
 		<h2>Portfolio</h2>
@@ -64,19 +65,21 @@
 				<p>Someone can enter in the numbers they want, and press the big blue button to get the result.</p>
 		</div>
 
-		<h4>Contact</h4>
+		<div class="contactbox">
+			<h4>Contact</h4>
 
-		<p>If you're interested in chatting or want more information about what I'v been working on, I'd love to hear from you!</p>
+			<p>If you're interested in chatting or want more information about what I've been working on, I'd love to hear from you!</p>
 
-		<p>Phone: +1 (111) 555-1234</p>
+			<p>Phone: <strong>+1 (111) 555-1234</strong></p>
 
-		<p>Email: <a href="mailto:alex@awesomesauce.dev?subject=Hello%20There!">alex@awesomesauce.dev</a></p>
+			<p>Email: <a href="mailto:alex@awesomesauce.dev?subject=Hello%20There!"><strong>alex@awesomesauce.dev</strong></a></p>
+		</div>
 
 	</body>
 
-	<footer class="main-footer">
-		<span>Alexander L. P. Williams</span>
-		<span>Back To Top</span>
+	<footer class="main-footer clearfix">
+		<span class="footname">Alexander L. P. Williams</span>
+		<span class="return">Back To Top</span>
 	</footer>
 
 </html>
