Reformat & Media Query Work
removed intro div and moved profile & blurb classes into topbox div. added bottom-nav class along with assocated links. also did a lot of minor tweaks and format changes while viewing through 768 media query

--- a/index.html
+++ b/index.html
@@ -19,14 +19,13 @@
 		        				<li><a href="#">Contact</a></li>
 		      				</ul>
 	      				</nav>
+      				<!-- <div class="intro clearfix"> -->
+						<img class="profile" src="img/responsive-layout-profile.png" alt="profile image">
+						<p class="blurb">Hi! I'm a front-end developer who loves responsive design and css. I recently finished a degree in front-end web development at Treehouse and am excited to put all my skills to use!</p>
+					<!-- </div> -->
 	      		</div>
 			</header>
-
-			<div class="intro clearfix">
-				<img class="profile" src="img/responsive-layout-profile.png" alt="profile image">
-				<p class="blurb">Hi! I'm a front-end developer who loves responsive design and css. I recently finished a degree in front-end web development at Treehouse and am excited to put all my skills to use!</p>
-			</div>
-
+			
 			<div class="container clearfix">
 
 				<h2>Portfolio</h2>
@@ -70,7 +69,7 @@
 			</div>
 
 			<div class="contactbox clearfix">
-				<h4>Contact</h4>
+				<h4>CONTACT</h4>
 
 				<p>If you're interested in chatting or want more information about what I've been working on, I'd love to hear from you!</p>
 
@@ -81,8 +80,15 @@
 		</div>
 
 	<footer class="main-footer clearfix">
-		<span class="footname">Alexander L. P. Williams</span>
-		<span class="return">Back To Top</span>
+		<span class="footname"><strong>Alexander L. P. Williams</strong></span>
+		<span class="return"><strong><a href="#">Back To Top</strong></span>
+			<nav>
+				<ul class="bottom-nav">
+				<li><a href="#">Contact</a></li>
+				<li><a href="#">Portfolio</a></li>
+				<li><a href="#">Home</a></li>
+				</ul>
+			</nav>
 	</footer>
 
 	</body>
