--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<div class="wrap">
-			<header class="main-header">
+			<header class="main-header clearfix">
 				<div class="topbox clearfix">
 					<h1 class="name"><a href="#">Alexander L. P. Williams</a></h1>
 	      				<nav>
@@ -19,10 +19,10 @@
 		        				<li><a href="#">Contact</a></li>
 		      				</ul>
 	      				</nav>
-      				<!-- <div class="intro clearfix"> -->
+      				<div class="intro clearfix">
 						<img class="profile" src="img/responsive-layout-profile.png" alt="profile image">
 						<p class="blurb">Hi! I'm a front-end developer who loves responsive design and css. I recently finished a degree in front-end web development at Treehouse and am excited to put all my skills to use!</p>
-					<!-- </div> -->
+					</div>
 	      		</div>
 			</header>
 			
