--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta name="viewport" content="width-device-width, initial-scale-1.0">
 		<title>Responsive Layout</title>
-		<link href='https://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
+		<link href="https://fonts.googleapis.com/css?family=Asap|Nunito&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/style.css">
 	</head>
@@ -11,7 +11,7 @@
 		<div class="wrap">
 			<header class="main-header clearfix">
 				<div class="topbox clearfix">
-					<h1 class="name"><a href="#">Alexander L. P. Williams</a></h1>
+					<h1 class="name">Alexander L. P. Williams</h1>
 	      				<nav>
 		      				<ul class="main-nav">
 		        				<li><a href="#">Home</a></li>
