Skills Section & <nav>
added id(s) for site navigation, skills page section, added skillsbox css, updated <nav> tag, <nav> css properties, adjusted padding for some css elements

--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
 				<div class="topbox clearfix">
 					<h1 class="name">Alexander L. P. Williams</h1>
 	      				<nav>
-		      				<ul class="main-nav">
+		      				<!-- <ul class="main-nav"> -->
 		        				<li><a href="#">Home</a></li>
-		        				<li><a href="#">Portfolio</a></li>
-		        				<li><a href="#">Contact</a></li>
-		      				</ul>
+		        				<li><a href="#skills">Skills</a></li>
+		        				<li><a href="#portfolio">Portfolio</a></li>
+		        				<li><a href="#contact">Contact</a></li>
+		      				<!-- </ul> -->
 	      				</nav>
       				<div class="intro clearfix">
 						<img class="profile" src="img/responsive-layout-profile.png" alt="profile image">
@@ -28,7 +29,15 @@
 			
 			<div class="container clearfix">
 
-				<h2>Portfolio</h2>
+				<h2 id="skills">Skills</h2>
+
+				<div class="skillsbox">
+					<!-- <img class="skillsimg" src="img/" alt="skills image"> -->
+					<h3>Building a Developer Skillset on an IT Operations Foundation</h3>
+						<p>I have skills in Networking and Security and currently hold up-to-date certifications.  Problem solving and project management are also a couple of well-honed skills I have utilized in my 9+ years working in IT.  I am confident and optimistic that my existing IT skill set along with my rapidly developing new skills in responsive design and CSS will make me a valuable addition to any team I am fortunate enough to be a part of!</p>
+				</div>
+			
+				<h2 id="portfolio">Portfolio</h2>
 
 				<div class="box">
 					<img class="marketing" src="img/portfolio-1.png" alt="marketing image">
@@ -69,7 +78,7 @@
 			</div>
 
 			<div class="contactbox clearfix">
-				<h4>CONTACT</h4>
+				<h4 id="contact">CONTACT</h4>
 
 				<p>If you're interested in chatting or want more information about what I've been working on, I'd love to hear from you!</p>
 
@@ -82,13 +91,12 @@
 	<footer class="main-footer clearfix">
 		<span class="footname"><strong>Alexander L. P. Williams</strong></span>
 		<span class="return"><strong><a href="#">Back To Top</strong></span>
-			<nav>
 				<ul class="bottom-nav">
-				<li><a href="#">Contact</a></li>
-				<li><a href="#">Portfolio</a></li>
+				<li><a href="#contact">Contact</a></li>
+				<li><a href="#portfolio">Portfolio</a></li>
+				<li><a href="#skills">Skills</a></li>
 				<li><a href="#">Home</a></li>
 				</ul>
-			</nav>
 	</footer>
 
 	</body>
