Validator Test & Corrections
ran index.html through validator, corrected missing <ul> and </a> tags, declared language in <html> tag, broke font links into separate lines, fixed syntax preventing max width from kicking in after 1024 width, added a max width of 1150

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<meta name="viewport" content="width-device-width, initial-scale-1.0">
 		<title>Responsive Layout</title>
-		<link href="https://fonts.googleapis.com/css?family=Asap|Nunito&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Asap&display=swap" rel="stylesheet"> 
+		<link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet"> 
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/style.css">
 	</head>
@@ -13,12 +14,12 @@
 				<div class="topbox clearfix">
 					<h1 class="name">Alexander L. P. Williams</h1>
 	      				<nav>
-		      				<!-- <ul class="main-nav"> -->
+		      				<ul>
 		        				<li><a href="#">Home</a></li>
 		        				<li><a href="#skills">Skills</a></li>
 		        				<li><a href="#portfolio">Portfolio</a></li>
 		        				<li><a href="#contact">Contact</a></li>
-		      				<!-- </ul> -->
+		      				</ul>
 	      				</nav>
       				<div class="intro clearfix">
 						<img class="profile" src="img/responsive-layout-profile.png" alt="profile image">
@@ -90,7 +91,7 @@
 
 	<footer class="main-footer clearfix">
 		<span class="footname"><strong>Alexander L. P. Williams</strong></span>
-		<span class="return"><strong><a href="#">Back To Top</strong></span>
+		<span class="return"><strong><a href="#">Back To Top</a></strong></span>
 				<ul class="bottom-nav">
 				<li><a href="#contact">Contact</a></li>
 				<li><a href="#portfolio">Portfolio</a></li>
